Intro: Shrink the vertical bars somewhat vertically
Intro: Space the vertical bars a bit more horizontally
Intro: Increased the font size for the max number text
Intro: Vertically center the pie representations in the negative space between the icon bar and the top of the fraction
Equality Lab: Added an arrow pointing to the number line location because the ticks can get too close together to distinguish between them
Equality Lab: Increased vertical space between horizontal bars
# 0.00.49 (62179) Mar 5, 2012
First 2 tabs: Fixed: Clicking on an in-flight pie piece causes numerator to get out of sync, by making it so you can't drag an animating piece
Equality Lab: Fixed a bug that caused the highlight to cover up tick marks on the scaled number line
Equality Lab: Reduced the width of the horizontal bars, and reduced its bucket width to match the others
Fractions Intro: Changed all inner stroke widths to 1.0 while leaving the exterior stroke width thick
Fractions Intro: Removed unused cake code
Fractions Intro: Fixed: Cake container slices do not match up exactly with the slice locations
# 0.00.48 (62151) Mar 3, 2012
Matching Game: Rounded edges of the equals sign and tuned its size and stroke thickness
Matching Game: Reduced pitch by an octave
Matching Game: Change all representations to be blue and green
Matching Game: Moved "keep match" button to the side of the scale
Matching Game: Added "My Matches" text under the score cells
Matching Game: Added "play again" button above "next level" button.
Matching Game: Made the score cells bigger
Matching Game: Changed "Keep" button to "Keep Match" with a line break
# 0.00.47 (62116) Mar 2, 2012
Equality Lab: Made it so you can't drag the blue representation
Equality Lab: Center representations vertically
Equality Lab: Made representation control panels 20% smaller
Equality Lab: Added scaled number line representation
Intro: Fixed: Number line should respect the user-selected max